src/test/deca/context/valid/NoOperation.deca
// Description:
//    Program using noOperation
//
// Results:
//    nothing
//
// History:
//    Created on 20/01/2025


{
    ;
}
