src/test/deca/context/invalid/test_class/no_identifier.deca
// Description:
//   Test of an identifier without attached definition.
//
// Results:
//    Error "Identifier has no attached Definition".
//
// History:
//    Created on 20/1/2025
{
    unknownVar = 10;
}